TEST_PROGRAMS/VALID/09/append.go
package append_exps

func main() {
    _ := append(an_id, 3 + 3);
}
