TEST_PROGRAMS/INVALID/09/blank_funccall_arg.go
package blank_funcarg

func main() {
    a(_)
}
